VZDEV/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CCPM_SMSMessageType__c</fullName>
        <label>SMS Message Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_activityCreationDateTime__c</fullName>
        <description>This field contains the date and time of the time the Activity was created. This will mainly be used in auditing reports</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_callDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Details</label>
        <referenceTo>CCPM_callDetails__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_communicationDirection__c</fullName>
        <description>This field describes if the SMS is either sent or received.</description>
        <inlineHelpText>This field describes if the SMS is either sent or received.</inlineHelpText>
        <label>Communication Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_nextSteps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>